--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
 				</div>
 			</div>
 			<div class="rhs">
-                <input type="checkbox" id="darkmode-toggle"/>
+                <input type="checkbox" id="darkmode-toggle" name="togglevalue" onclick="toggleValue()" />
                 <label for="darkmode-toggle">
                     <div class="light">
-                        <img src="/resources/icons/light.svg" width="10px" height="10px" alt="">
+                        <img src="/resources/icons/light.svg" width="14px" height="14px" alt="" id="light-mode-svg">
                     </div>
                     <div class="dark">
-                        <img src="/resources/icons/dark.svg" width="10px" height="10px" alt="">
+                        <img src="/resources/icons/dark.svg" width="14px" height="14px" alt="" id="dark-mode-svg">
                     </div>
             </div>
 		</div>
