adding theme switcher

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<body>
 		<div class="heading-wrapper">
 			<div class="lhs">
-				<div class="heading">systems, everything I know and <span style="font-style: italic">you would need to know</span></div>
+				<div class="heading">systems, everything I know and <span style="font-style: italic">you</span> would need to know</div>
 				<div class="subheading">
 					I've been a person obssessed with structured systems and architecture of well functional things. I'll talk about everything that has excited me in the past and hopefully you can
 					take something from it
@@ -27,7 +27,17 @@
                     </div>
             </div>
 		</div>
-		<div class="main-wrapper">Hello World</div>
+		<div class="divider">
+
+		</div>
+		<div class="main-wrapper">
+			<div class="content">I've been a person obssessed with structured systems and architecture of well functional things. I'll talk about everything that has excited me in the past and hopefully you can
+				take something from it</div>
+				<div class="content">I've been a person obssessed with structured systems and architecture of well functional things. I'll talk about everything that has excited me in the past and hopefully you can
+					take something from it</div>
+		</div>
 	</body>
 	<script src="js/script.js"></script>
+	<script src="js/theme.js"></script>
+
 </html>
