adding base layering for the blog

--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
 			<div class="lhs">
 				<div class="heading">systems, everything I know and <span style="font-style: italic">you</span> would need to know</div>
 				<div class="subheading">
-					I've been a person obssessed with structured systems and architecture of well functional things. I'll talk about everything that has excited me in the past and hopefully you can
-					take something from it
-				</div>
+					I have always had a deep fascination with structured systems and the architecture of well-functioning things. In my writings, I will be sharing my experiences and the knowledge I have gained along the way, with the hope that it will ignite inspiration in your own pursuits</div>
 			</div>
 			<div class="rhs">
                 <input type="checkbox" id="darkmode-toggle" name="togglevalue" onclick="toggleValue()" />
@@ -28,17 +26,16 @@
             </div>
 		</div>
 		<div class="divider">
-
 		</div>
-		<div class="main-wrapper">
-			<div class="content">I've been a person obssessed with structured systems and architecture of well functional things. I'll talk about everything that has excited me in the past and hopefully you can
-				take something from it</div>
-				<div class="content">I've been a person obssessed with structured systems and architecture of well functional things. I'll talk about everything that has excited me in the past and hopefully you can
-					take something from it</div>
+		<div class="content-wrapper" id="content-wrapper">
+			<div class="content">
+				<div class="heading">Figma components is not a Design System</div>
+				<div class="body">They alone do not constitute a complete design system. While Figma components provide reusability and consistency within a design tool, a design system encompasses a broader set of elements and guidelines that define the overall design language and user experience of a product.</div>
+			</div>
 		</div>
 	</body>
-	<script src="js/script.js"></script>
 	<script src="js/theme.js"></script>
+	<script src="js/script.js"></script>
 	<script type="module">
 		import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.1/firebase-app.js";
 		import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.22.1/firebase-analytics.js";
