--- a/index.html
+++ b/index.html
@@ -27,12 +27,17 @@
 		</div>
 		<div class="divider">
 		</div>
-		<div class="content-wrapper" id="content-wrapper">
+		<div class="content-wrapper">
 			<div class="content">
-				<div class="heading">Figma components is not a Design System</div>
-				<div class="body">They alone do not constitute a complete design system. While Figma components provide reusability and consistency within a design tool, a design system encompasses a broader set of elements and guidelines that define the overall design language and user experience of a product.</div>
-			</div>
+				<div class="heading">prioritise the primacy of frameworks over momentary solutions</div>
+				<div class="body">building structure into your thoughts, rather than solely focusing on solving the current problem at hand, is always a practice that will lead you far. Scaling becomes much easier when you have a framework that supports your reasoning, enabling you to address not only present challenges but also future ones. To illustrate this concept, let's consider the act of preparing an apple cinnamon pie on a peaceful Sunday afternoon. While it may seem easier to simply search for a recipe online, a more principled approach involves understanding the fundamentals of baking and utilizing that knowledge to create an extraordinary apple pie. By embracing such an approach, one not only gains an understanding of how to apply the foundational principles of baking to desserts but also expands their culinary prowess to other dishes as well. Go make yourself a garlic bread :D</div>
 		</div>
+		</div>
+		<div class="footer">
+			<div class="lhs">Last Edited on 14 June 2023</div>
+			<a href="https://www.2dots.xyz" target=”_blank”><div class="rhs">© R Trikha 2023</div></a>
+		</div>
+	</div>
 	</body>
 	<script src="js/theme.js"></script>
 	<script src="js/script.js"></script>
