adding OG description

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="styling/style.css" />
 		<title>systems</title>
+		<meta property="og:title" content="systems" />
+		<meta property="og:description" content="everything I know and you would need to know" />
+		<meta property="og:image" content="" />
+		<link rel="shortcut icon" href="./resources/icons/LogoOG.png">
 	</head>
 	<body>
 		<div class="heading-wrapper">
@@ -30,7 +34,7 @@
 		<div class="content-wrapper">
 			<div class="content">
 				<div class="heading">prioritise the primacy of frameworks over momentary solutions</div>
-				<div class="body">building structure into your thoughts, rather than solely focusing on solving the current problem at hand, is always a practice that will lead you far. Scaling becomes much easier when you have a framework that supports your reasoning, enabling you to address not only present challenges but also future ones. To illustrate this concept, let's consider the act of preparing an apple cinnamon pie on a peaceful Sunday afternoon. While it may seem easier to simply search for a recipe online, a more principled approach involves understanding the fundamentals of baking and utilizing that knowledge to create an extraordinary apple pie. By embracing such an approach, one not only gains an understanding of how to apply the foundational principles of baking to desserts but also expands their culinary prowess to other dishes as well. Go make yourself a garlic bread :D</div>
+				<div class="body">build structure into your thoughts, rather than solely focusing on solving the current problem at hand, is always a practice that will lead you far. Scaling becomes much easier when you have a framework that supports your reasoning, enabling you to address not only present challenges but also future ones. To illustrate this concept, let's consider the act of preparing an apple cinnamon pie on a peaceful Sunday afternoon. While it may seem easier to simply search for a recipe online, a more principled approach involves understanding the fundamentals of baking and utilizing that knowledge to create an extraordinary apple pie. By embracing such an approach, one not only gains an understanding of how to apply the foundational principles of baking to desserts but also expands their culinary prowess to other dishes as well. Go make yourself a garlic bread :D</div>
 		</div>
 		</div>
 		<div class="footer">
