adding OG image

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<title>systems</title>
 		<meta property="og:title" content="systems" />
 		<meta property="og:description" content="everything I know and you would need to know" />
-		<meta property="og:image" content="" />
+		<meta property="og:image" content="https://raw.githubusercontent.com/rtrikha/systems/main/resources/icons/LogoOG.png" />
 		<link rel="shortcut icon" href="./resources/icons/LogoOG.png">
 	</head>
 	<body>
