--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			<div class="lhs">
 				<div class="heading">systems, everything I know and <span style="font-style: italic">you</span> would need to know</div>
 				<div class="subheading">
-					I have always had a deep fascination with structured systems and the architecture of well-functioning things. In my writings, I will be sharing my experiences and the knowledge I have gained along the way, with the hope that it will ignite inspiration in your own pursuits</div>
+					With a deep fascination for structured systems and the architecture of well-functioning things. In my writings, I will be sharing my experiences and the knowledge I have gained along the way, with the hope that it will ignite inspiration in your own pursuits</div>
 			</div>
 			<div class="rhs">
                 <input type="checkbox" id="darkmode-toggle" name="togglevalue" onclick="toggleValue()" />
@@ -34,7 +34,7 @@
 		<div class="content-wrapper">
 			<div class="content">
 				<div class="heading">prioritise the primacy of frameworks over momentary solutions</div>
-				<div class="body">Building structure into your thoughts, rather than solely focusing on solving the current problem at hand, is always a practice that will lead you far. Scaling becomes much easier when you have a framework that supports your reasoning, enabling you to address not only present challenges but also future ones. a framework that supports your reasoning not only aids in addressing present challenges but also fosters the ability to proactively anticipate and tackle future obstacles. It provides a roadmap that helps you identify patterns, identify underlying causes, and formulate long-term solutions. By consistently applying this structured thinking approach, you enhance your problem-solving skills and establish a more resilient mindset, preparing you to handle a wide range of situations that may arise along your journey.</div>
+				<div class="body">Building structure into your thoughts, rather than solely focusing on solving the current problem at hand, is always a practice that will lead you far. Scaling becomes much easier when you have a framework that supports your reasoning, enabling you to address not only present challenges but also future ones. It provides a roadmap that helps you identify patterns, identify underlying causes, and formulate long-term solutions. Systems are to meant to be applied to scale, be in the shoes of an architect and construct your foundation which is robust and scalable</div>
 				<div class="emlif"><span style="font-weight: 800">explain me like I'm five:</span> let's think about making an apple cinnamon pie on a calm and relaxing Sunday afternoon. You might think it's easier to just look up a recipe online to make the pie. But there's a better way! Instead, you can learn the basic techniques of baking and use that knowledge to make an amazing apple pie. This way, you'll understand how things work and can create something really special.
 				<br>But here's the exciting part: by learning these baking principles, you can also use them to make many other delicious dishes, not just desserts! For example, you can even try making garlic bread. It's all about understanding the important rules and techniques of baking, which will help you become a great cook. So why not give it a try and have fun exploring different recipes? <br><img src="./resources/content_images/baking.svg" alt="">
 			</div>
