updating the heading

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			<div class="lhs">
 				<div class="heading">how we at Swiggy build products using<span style="font-style: italic"> our Design System</span></div>
 				<div class="subheading">
-					With a deep fascination for structured systems and the architecture of well-functioning things. In my writings, I will be sharing my experiences and the knowledge I have gained along the way, with the hope that it will ignite inspiration in your own pursuits</div>
+					With a fascination for structured systems and their architecture, I share my experiences and knowledge gained along the way. Systems are subjective, with no definitive right or wrong definition. Readers are encouraged to explore, reflect, and form their own perspectives. The exploration of systems is a continuous journey of discovery and growth.</div>
 			</div>
 			<div class="rhs">
                 <input type="checkbox" id="darkmode-toggle" name="togglevalue" onclick="toggleValue()" />
@@ -71,7 +71,7 @@
 					   <div class="subheading">2. Theme support for Multiple Verticals</div>
 					   <div class="body">The foundation of our system revolves around the concept of aliases, which allows us to infuse a unique personality into the entire Swiggy fleet when integrated into different verticals. At the core of this system are tokens like BG Primary, Button Primary, and Border Primary. However, the meaning and appearance of these tokens can vary based on the specific vertical they are applied to.
 						<br>To make it even flexible, our system includes support for vertical-dependent tokens within the pattern library. While this feature has some limitations, the need to create specific tokens arises infrequently. Nonetheless, we have provisions in place to address such requirements when they do arise.
-						<img src="./resources/content_images/themeProvider-light.png" alt="" id="themeProvider">	
+						<img src="/systems/resources/content_images/themeProvider-Light.png" alt="" id="themeProvider">	
 
 					</div>
 			</div>
@@ -108,6 +108,18 @@
 					<br>
 					Although we have achieved uniformity in terms of tokens across all platforms, the development of components follows an on-demand basis. This approach helps us allocate our resources more efficiently. However, it does occasionally result in situations where a particular tech stack lacks a necessary component or pattern for a specific feature.
 					</div>
+			</div>
+			<div class="content">
+				<div class="heading">What are we working on currently?</div>
+				<div class="body">Attempting to talk about the intricacies of our design system would be a complex task. However, I will focus on three fundamental aspects that provide insights into its functioning:
+				</div>
+						<div class="subheading">Open sourcing our Design System</div>
+						<div class="body">Over the past 1.5 years, we have encountered and successfully tackled various people, technical, and design challenges and solved them through iterative processes. This experience has led us to develop an approach that effectively addresses these issues and allows us to accomplish our goals. We understand that system design problems are commonly faced by many teams, especially during the early stages of developing their system.
+							<br> <br>
+							In light of this, we have been actively working towards open sourcing our system design and providing comprehensive documentation on our workflows. Our aim is to assist designers and engineers in navigating through the majority of problems they encounter while creating a design system. By sharing our insights and approaches, we hope to contribute to the broader open source community and empower others to overcome similar challenges more efficiently.
+							</div>
+					   <div class="subheading">Experimentation Framework</div>
+					   <div class="body">
 			</div>
 		</div>
 		</div>
