--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="styling/style.css" />
-		<title>systems</title>
-		<meta property="og:title" content="systems" />
-		<meta property="og:description" content="everything I know and you would need to know" />
+
+		<title>twodots | Personal workbench</title>
+		<meta property="og:url" content="https://systems.twodots.xyz/" />
+		<meta property="og:title" content="Design System at Swiggy" />
+		<meta property="og:description" content="A brief overview of Swiggy's Design System" />
 		<meta property="og:image" content="https://raw.githubusercontent.com/rtrikha/systems/main/resources/icons/LogoOG.png" />
 		<link rel="shortcut icon" href="./resources/icons/LogoOG.png">
 	</head>
