adding OG image

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<meta property="og:url" content="https://systems.twodots.xyz/" />
 		<meta property="og:title" content="Design System at Swiggy" />
 		<meta property="og:description" content="A brief overview of Swiggy's Design System" />
-		<meta property="og:image" content="" />
+		<meta property="og:image" content="https://raw.githubusercontent.com/rtrikha/systems/main/resources/OG.png" />
 		<link rel="shortcut icon" href="./resources/icons/LogoOG.png">
 	</head>
 	<body>
