--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="styling/style.css" />
-
-		<title>twodots | Personal workbench</title>
+		<title>Design System at Swiggy</title>
 		<meta property="og:url" content="https://systems.twodots.xyz/" />
 		<meta property="og:title" content="Design System at Swiggy" />
 		<meta property="og:description" content="A brief overview of Swiggy's Design System" />
