updating header copy

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 		</div>
 		<div class="content-wrapper">
 			<div class="content">
-				<div class="body">Its not a blog which talks about what a design system is and why it is important, there are better examples our there which can teach you the importance of a system. In this blog perhaps I'll be walking you through how we at Swiggy have and are building processes to bootstrap Design and Engineering. While the examples I talk about will revolve around addressing challenges specific to Swiggy, however the principles can be applied to organisations of any size or industry.</div>
+				<div class="body">Its not a blog which talks about what a design system is and why it is important, there are better examples out there which can teach you the importance of a system. In this blog perhaps I'll be walking you through how we at Swiggy have and are building processes to bootstrap Design and Engineering. While the examples I talk about will revolve around addressing challenges specific to Swiggy, however the principles can be applied to organisations of any size or industry.</div>
 			</div>
 			<div class="content">
 				<div class="heading">A little about scale and problem at hand</div>
@@ -67,14 +67,13 @@
 							<div class="pointer">
 								<div class="body"><b>1.3 Common Pattern Library</b> - This section serves as a playground where multiple teams can explore and adapt existing patterns to meet their specific requirements. Our goal is to maximize the reuse of patterns whenever possible. However, we keep this space somewhat separate from the pattern library to ensure that contributors and consumers (designers and engineers) are fully aware when utilizing a shared asset.
 										<br><b>What it means for designers? </b>-This is a separate page in the same Pattern Library Figma file.<br><b>What it means for engineers? </b>-This is just a different folder inside the same Pattern Library GitHub repo.</div>
-								</div>
-					   </div>
-					   <div class="subheading">2. Theme support for Multiple Verticals</div>
-					   <div class="body">The foundation of our system revolves around the concept of aliases, which allows us to infuse a unique personality into the entire Swiggy fleet when integrated into different verticals. At the core of this system are tokens like BG Primary, Button Primary, and Border Primary. However, the meaning and appearance of these tokens can vary based on the specific vertical they are applied to.
+							</div>
+					    </div>
+					    <div class="subheading">2. Theme support for Multiple Verticals</div>
+					    <div class="body">The foundation of our system revolves around the concept of aliases, which allows us to infuse a unique personality into the entire Swiggy fleet when integrated into different verticals. At the core of this system are tokens like BG Primary, Button Primary, and Border Primary. However, the meaning and appearance of these tokens can vary based on the specific vertical they are applied to.
 						<br>To make it even flexible, our system includes support for vertical-dependent tokens within the pattern library. While this feature has some limitations, the need to create specific tokens arises infrequently. Nonetheless, we have provisions in place to address such requirements when they do arise.
-						<img src="/systems/resources/content_images/themeProvider-Light.png" alt="" id="themeProvider">	
-
-					</div>
+						<img src="./resources/content_images/themeProvider-Light.png" alt="" id="themeProvider">	
+						</div>
 			</div>
 			<div class="content">
 				<div class="heading">How are things delegated and who runs the show?</div>
